--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
+    "server": "npx json-server --port 4000 api.json",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -13,7 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.0",
     "pinia": "^2.1.7",
+    "postcss": "^8.4.38",
+    "postcss-nested": "^6.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
